--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    <load ="partials/header.html" />
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/styles.css">
+  <title>Homework11</title>
+</head>
+<body>
+  <div class="container">
+    <form class="form">
+      <div class="form-text">
+      <input class="input" placeholder="Search images.. " name="query" type="text" required>
+      <button class="button" type="submit">Search</button>
+    </form>
+   
+  </div>
+  <span class="loader is-hidden"></span>
+  <div class="images-container">
+   
+    <ul class="images"></ul>
+  </div>
 
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
-    <script type="module" src="./main.js"></script>
-  </body>
+  <script type="module" src="./main.js" defer></script>
+</body>
 </html>
+<p class="description-item-text"></p>
